[metadata]
name = mqtt_statsd
summary = A script to publish MQTT metrics into statsd
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    mqtt_statsd

[entry_points]
console_scripts =
    mqtt_statsd = mqtt_statsd.daemon:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = mqtt_statsd/locale
domain = mqtt_statsd

[update_catalog]
domain = mqtt_statsd
output_dir = mqtt_statsd/locale
input_file = mqtt_statsd/locale/mqtt_statsd.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mqtt_statsd/locale/mqtt_statsd.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
